CONN_2382: Removed corbertura execution from default build process. use corbertura:corbertura to run the report. Added log4j properties files to projects to supress DEBUG levels from being outputted during test execution.