@@ -85,25 +85,7 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>-XX:MaxPermSize=1012m -XX:-UseSplitVerifier -noverify</argLine>
-                    <systemProperties>
-                        <property>
-                            <name>com.sun.aas.instanceRoot</name>
-                            <!--value>${project.baseUri}/test-classes/</value-->
-                            <value>${project.build.testOutputDirectory}</value>
-                        </property>
-                        <property>
-                            <name>nhinc.properties.dir</name>
-                            <!--value>${project.baseUri}/test-classes/</value-->
-                            <value>${project.build.testOutputDirectory}</value>
-                        </property>
-                    </systemProperties>
-                </configuration>
-            </plugin>
+            <!--
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
@@ -135,6 +117,7 @@
                     </execution>
                 </executions>
             </plugin>
+            -->
         </plugins>
 
         <pluginManagement>
